# dashboard-llm

./: .gitignore  README.md  change_admin_password.py  config.example.yaml  kill_dev.sh  monitor.py  pyproject.toml  requirements.txt  run_dev.sh
docs/: architecture-map.md  architecture.md  final-correction-report-2026-05-01.md  final-correction-report.md  final-report-2026-04-30.md  gpu-process-viewer.md  lot1-final-report.md  lot1-phase10-diagnostic.md  lot1-phase11-summary.md  phase1-summary-2026-04-30.md  phase2-summary-2026-04-30.md  phase3-summary-2026-04-30.md  phase4-summary-2026-04-30.md  phase678-summary-2026-04-30.md
llm_dashboard/: __init__.py  __main__.py  app_factory.py  cli.py  config.py  models.py  runtime.py
scripts/: GUIDE.md  dashboard-llm.service
tests/: conftest.py  test_admin_control_standalone.py  test_api_contract.py  test_app_factory_creation.py  test_baseline_imports.py  test_commands.py  test_config.py  test_config_validation_bools.py  test_control.py  test_controller_lifecycle.py  test_dashboard_api_gpu_processes_hardening.py  test_dashboard_css_static.py  test_detection.py  test_gpu_process_api_config.py  test_gpu_process_collection.py  test_gpu_process_contract.py  test_gpu_process_prometheus_hardening.py  test_health.py  test_integration.py  test_logs.py  test_lot1_phase11.py  test_lot1_phase12_ops.py  test_lot1_phase1314.py  test_lot2_gpu_processes.py  test_monitors.py  test_phase2_cleanup.py  test_phase3_factory.py  test_phase5_web_routes.py  test_phase678_combined.py  test_public_api.py  test_registry.py  test_templates.py  (+6 more)
(+51 files in other folders)
