[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-dashboard"
version = "2.0.0-dev"
description = "Lightweight monitoring and admin dashboard for local LLM servers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "werkzeug>=3.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]

[project.optional-dependencies]
nvidia = ["nvidia-ml-py>=12.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
llm-dashboard = "llm_dashboard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["llm_dashboard"]
include = [
    "llm_dashboard/templates/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
